首页动画效果

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- <%= require('html-loader!./layout/header-common.html') %> -->
   <title>clj个人官网</title>
   <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.min.css">
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   <link rel="stylesheet" type="text/css" href="css/public.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
