--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge chrome=1" />
-<meta name="format-detection" content="telephone=no"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0 user-scalable = no" >
-<meta name="keywords" content="个人网站, clj, 前端, ui设计, 蓝风">
-<meta name="description" content="clj的个人展示网站">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge chrome=1" />
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0 user-scalable = no" >
+  <meta name="keywords" content="个人网站, clj, 前端, ui设计, 蓝风">
+  <meta name="description" content="clj的个人展示网站">
   <!-- <%= require('html-loader!./layout/header-common.html') %> -->
-  <title>clj个人官网</title>
+  <title></title>
   <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
   <link rel="stylesheet" type="text/css" href="css/animate.min.css">
   <link rel="stylesheet" type="text/css" href="css/layout.css">
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-  
   <!-- Swiper -->
   <!-- 汉堡包菜单 -->
   <!-- <%= require('html-loader!./layout/slide-meun.html') %> -->
@@ -26,9 +25,9 @@
     <div class="bar"></div>
     <div class="bar"></div>
   </div>
-  <div class="logo">
+  <a href="index.html" class="logo">
     <img src="images/index/logo.png">
-  </div>
+  </a>
   <div class="swiper-container"  dir="rtl" id="slide-content">
     <div class="swiper-wrapper">
       <!-- 左侧菜单导航开始 -->
@@ -51,7 +50,7 @@
         </a>
       </li>
       <li>
-        <a href="/dist/view/about.html">
+        <a href="about.html">
           <h4 class="nav-en">ABOUT</h4>
           <div class="line"></div>
           <h6 class="nav-cn">关于</h6>
@@ -210,7 +209,7 @@
                         </a>
                       </li>
                       <li class="pr">
-                        <a href="/dist/view/about.html" class="pr">
+                        <a href="about.html" class="p-r">
                           <img src="images/index/finger.png" alt="关于我指纹">
                         </a>
                       </li>
