联系我的页面

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
       </li>
       <li>
-        <a href="javascript:;">
+        <a href="contact.html">
           <h4 class="nav-en">CONTACT</h4>
           <div class="line"></div>
           <h6 class="nav-cn">联系</h6>
