--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <body>
   <!-- Swiper -->
   <!-- 汉堡包菜单 -->
-  <!-- <%= require('html-loader!./layout/slide-meun.html') %> -->
   <div class="menu-button">
     <div class="bar"></div>
     <div class="bar"></div>
@@ -36,7 +35,7 @@
         <div class="slider-bar">
     <ul>
       <li>
-        <a href="/dist/view/index.html">
+        <a href="index.html">
           <h4 class="nav-en">HOME</h4>
           <div class="line"></div>
           <h6 class="nav-cn">首页</h6>
@@ -57,7 +56,7 @@
         </a>
       </li>
       <li>
-        <a href="javascript:;">
+        <a href="works.html">
           <h4 class="nav-en">WORKS</h4>
           <div class="line"></div>
           <h6 class="nav-cn">案例</h6>
@@ -204,7 +203,7 @@
                     </div>
                     <ul class="page6-list clearfix">
                       <li class="pr">
-                        <a href="javascript:;" class="pr">
+                        <a href="works.html" class="pr">
                           <p>CASE<br><span>精彩案例</span></p>
                         </a>
                       </li>
@@ -214,8 +213,8 @@
                         </a>
                       </li>
                       <li class="pr">
-                        <a href="/dist/view/blog.html" class="pr">
-                          <p>BLOG<br><span>个人博客</span></p>
+                        <a href="https://github.com/clj4348" class="pr">
+                          <p>GITHUB<br><span>开源项目</span></p>
                         </a>
                       </li>
                     </ul>
