--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge chrome=1" />
-    <meta name="format-detection" content="telephone=no"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0 user-scalable = no" >
-    <meta name="keywords" content="个人网站, clj, 前端, ui设计, 蓝风">
-    <meta name="description" content="clj的个人展示网站">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="css/layout.css">
-    <link rel="stylesheet" type="text/css" href="css/public.css">
-    <link rel="stylesheet" type="text/css" href="css/contact.css">
-  </head>
+
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge chrome=1" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0 user-scalable = no">
+	<meta name="keywords" content="个人网站, clj, 前端, ui设计, 蓝风">
+	<meta name="description" content="clj的个人展示网站">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/layout.css">
+	<link rel="stylesheet" type="text/css" href="css/public.css">
+	<link rel="stylesheet" type="text/css" href="css/contact.css">
+</head>
+
 <body>
-    <div class="logo-menu-button"></div>
-    <div class="slide-meun-container"></div>
-    <div class="contact-container">
-      <img class="contact-tit" src="images/contact/contact-tit.png">
-      <div class="mask-white"></div>
-      <div class="user-img-box">
-        <img src="images/contact/contact-user.png">
-        
-      </div>
-      <div class="radius-line radius-line-1"></div>
-      <div class="radius-line radius-line-2"></div>
-      <div class="radius-line radius-line-3"></div>
-    </div>
+	<div class="logo-menu-button"></div>
+	<div class="slide-meun-container"></div>
+	<div class="contact-container">
+		<div>
+			<img class="contact-tit" src="images/contact/contact-tit.png">
+			<div class="mask-white left-door"></div>
+			<div class="mask-white right-door"></div>
+			<div class="user-img-box">
+				<div class="dot-box">
+					<div class="user-img">
+						<img src="images/contact/contact-user.png">
+					</div>
+				</div>
+				<div class="dot">
+					<div class="dot2">
+						<div class="dot3">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container-content">
+			<div class="header-img">
+				<img src="images/contact/header.jpg">
+			</div>
+			<p class="contact-me">联系我</p>
+			<div class="contact-list">
+				<a class="">QQ: 1136284348</a>
+				<a class="" href="tel: 13600024482">Phone: 13600024482</a>
+				<a href="https://github.com/clj4348" class="github">
+					Github: <span>https://github.com/clj4348</span>
+				</a>
+			</div>
+			<div class="code-con">
+				<img src="images/contact/erweima.jpg" >
+				<p class="">领养好奇"猿"</p>
+			</div>
+			<a class="close">谢幕</a>
+		</div>
+	</div>
 </body>
+
 </html>
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/public/public.js"></script>
+<script src="js/contact.js" type="text/javascript" charset="utf-8"></script>
