--- a/works.html
+++ b/works.html
@@ -46,7 +46,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="javascript:;">
+				<a href="http://www.3ashop.cn/">
 					<div class="img-mask-con">
 						<div class="img-mask">
 							<img src="images/works/works-2-code.jpg" >
