--- a/index.html
+++ b/index.html
@@ -177,16 +177,18 @@
                       <li class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3.3s">&lt;/....&gt;</li>
                       <li class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="3.7s"></li>
                     </ul>
+                    <div class="round-line-container" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="4.1s">
                     <!-- 圆圈的边框 -->
-                    <ul class="round-wire ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="4.1s">
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
+                      <ul class="round-wire">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
