--- a/article.html
+++ b/article.html
@@ -33,12 +33,15 @@
         曾经我厚着脸皮向你提出了一个请求，就是让你唱一首歌曲《Dream It Possible》，在一周之内用英文和中文结合起来一起唱出来，而且还无赖的要求打赌没有唱出就请吃饭，最后你还是解决了这场不公平的打赌，其实我并不是想你请我吃饭，只是想与你相见才找一个这么龌龊的理由。最终你也把歌唱出来了，可惜英文部分有点蹩脚；当时我超开心的去聆听了你这首歌了，好与不好已经不重要了。
       </p>
       <p class="item-text">
-        终于与你相遇，你化着淡淡的妆容，显得更有气质，而我显得稍微的有点木讷；就这样我们一同四个人开始今天的行程，我时不时的偷偷的看一下你，你有那么几次嘟起你的小嘴巴，有点小淘气的样子特别可爱，无意间看到你45度仰望的视角，寒风吹过你的头发，吹起的发丝更显得优雅；在你和别人对话时，我侧耳倾听，你的声音带有着小小的磁场，这可能和你唱歌有关吧；
+        终于与你相遇，你化着淡淡的妆容，显得更有气质，而我显得稍微的有点木讷；就这样我们一同四个人开始今天的行程，我时不时的偷偷的看一下你，你有那么几次嘟起你的小嘴巴，有点小淘气的样子特别可爱，无意间看到你45度仰望的视角，寒风吹过你的头发，吹起的发丝更显得优雅；在你和别人对话时，我侧耳倾听，你的声音带有着小小的磁场，听到有点甜，这可能和你唱歌有关吧！时间过得真快啊，一天的时间转瞬即逝，好像和你多说几句话，哪怕是吐槽一下生活的狗血也好，时间已经夜晚11点多了，也该回去了，原本打算送你到地铁站的，你执意不用，我只好作罢了，各自回去，我也只能回头在夜晚看见你的身影慢慢离开了我的视线，我这才回去宾馆；就那样躺着眼望着天花板，回忆这一天的事情，莫名奇妙的有一股失落感。
       </p>
       <p class="item-text">
-        与你相遇时，我心里不该如描述，正因为这样导致头脑全部空白，自己演练的无数次开场白，可还是表达不出，我才发现在喜欢人面前是如此的笨拙，回忆起当天我和你之间的对话屈指可数， 你离我明明是那么的近，却显得异常的遥远；如此糟糕的表现，怎么能让喜欢的人注意到我呢？ 懊悔已为时已晚了。
+        与你相遇时，我心里不该如描述，正因为这样导致头脑全部空白，自己演练的无数次开场白，可还是表达不出，我才发现在喜欢人面前是如此的笨拙，回想当天我和你之间的对话屈指可数， 你离我明明是那么的近，却显得异常的遥远；如此糟糕的表现，怎么能让喜欢的人注意到我呢？ 懊悔已为时已晚了。
       </p>
-    </div>
+      <p class="item-text">
+        我庆幸遇见了你，却遗憾只是遇见你，遗憾也许是人生的常态吧；遗憾过后还得继续前进，当遇到对的人时，不要再畏手畏脚了，要勇敢抓住幸福。
+      </p>
+    </div> 
   </div>
 </body>
 </html>
