文章修改调整

--- a/article.html
+++ b/article.html
@@ -39,7 +39,7 @@
         与你相遇时，我心里不该如描述，正因为这样导致头脑全部空白，自己演练的无数次开场白，可还是表达不出，我才发现在喜欢人面前是如此的笨拙，回想当天我和你之间的对话屈指可数， 你离我明明是那么的近，却显得异常的遥远；如此糟糕的表现，怎么能让喜欢的人注意到我呢？ 懊悔已为时已晚了。
       </p>
       <p class="item-text">
-        我庆幸遇见了你，却遗憾只是遇见你，遗憾也许是人生的常态吧；遗憾过后还得继续前进，当遇到对的人时，不要再畏手畏脚了，要勇敢抓住幸福。
+        我庆幸遇见了你，不想遗憾只是遇见你，遗憾也许是人生的常态吧；遗憾过后还得继续前进，如果可以我会向我们的目标前进，如果不行继续前行，只有变得更加强大才能给到喜欢的人足够的安全感。即使相识很短，我依旧认真喜欢你？
       </p>
     </div> 
   </div>
