--- a/article.html
+++ b/article.html
@@ -15,6 +15,9 @@
 <body>
   <div class="banner">
     <div class="blog-ad">
+      <p>圣诞节快乐</p>
+      <p></p> 
+    </div> 
     </div>
   </div>
   <div class="contact-container">
